src/test/ui/symbol-names/const-generics-demangling.stderr
error: symbol-name(_RMCsaP8qXevlYG3_25const_generics_demanglingINtB0_8UnsignedKhb_E)
  --> $DIR/const-generics-demangling.rs:7:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<const_generics_demangling[7e153590edc26969]::Unsigned<11: u8>>)
  --> $DIR/const-generics-demangling.rs:7:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<const_generics_demangling::Unsigned<11>>)
  --> $DIR/const-generics-demangling.rs:7:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs_CsaP8qXevlYG3_25const_generics_demanglingINtB2_6SignedKsn98_E)
  --> $DIR/const-generics-demangling.rs:15:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<const_generics_demangling[7e153590edc26969]::Signed<-152: i16>>)
  --> $DIR/const-generics-demangling.rs:15:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<const_generics_demangling::Signed<-152>>)
  --> $DIR/const-generics-demangling.rs:15:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs0_CsaP8qXevlYG3_25const_generics_demanglingINtB3_4BoolKb1_E)
  --> $DIR/const-generics-demangling.rs:23:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<const_generics_demangling[7e153590edc26969]::Bool<true: bool>>)
  --> $DIR/const-generics-demangling.rs:23:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<const_generics_demangling::Bool<true>>)
  --> $DIR/const-generics-demangling.rs:23:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs1_CsaP8qXevlYG3_25const_generics_demanglingINtB3_4CharKc2202_E)
  --> $DIR/const-generics-demangling.rs:31:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<const_generics_demangling[7e153590edc26969]::Char<'∂': char>>)
  --> $DIR/const-generics-demangling.rs:31:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<const_generics_demangling::Char<'∂'>>)
  --> $DIR/const-generics-demangling.rs:31:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 12 previous errors

